Fix alignment issues with bio and username

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -21,7 +21,7 @@
     margin-left: 1rem;
     padding-top: 2.5%;
     padding-left: 1rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
 }
 .bio {
     background-color: lightgray;
@@ -32,5 +32,5 @@
     padding-top: 2.5%;
     padding-left: 1rem;
     margin-top: 0.5rem;
-    height: 4.5rem;
+    height: 5.5rem;
 }
